# bibtexconv

./: .travis.yml  CMakeLists.txt  ChangeLog  Makefile.am  README.md  autogen.sh  bibtexconv.lsm  bootstrap  build-deb  clean-deb  configure.ac  configure.in  debian.conf  make-deb  make-ppa  packaging.conf  pbuilderrc.ubuntu  website.config
.github/workflows/: freebsd.yml  linux.yml  multiarch.yml  packaging.yml  testonly.yml
ci/: build-tool  ci-setup  install
debian/: bibtexconv.examples  bibtexconv.install  bibtexconv.lintian-overrides  bibtexconv.manpages  changelog  control  copyright  ietf2bibtex.examples  ietf2bibtex.install  ietf2bibtex.manpages  rules  watch
debian/source/: lintian-overrides
debian/tests/: 10-bibtexconv-html  11-bibtexconv-txt  12-bibtexconv-md-with-mappingfile  20-bibtexconv-odt  control
debian/upstream/: metadata
freebsd/bibtexconv/: Makefile  distinfo  make-diff  make-shar  pkg-descr  pkg-plist  test-packaging
packaging/: APKBUILD
rpm/: bibtexconv.spec
src/: CMakeLists.txt  ExampleReferences.bib  Makefile.am  ODT-Template.odt  RSerPool.bib  authors-fix.list  authors.list  bibtexconv-odt  bibtexconv-odt.1  bibtexconv-odt.8  bibtexconv-odt.bash-completion  bibtexconv-test  bibtexconv.1  bibtexconv.8  bibtexconv.bash-completion  bibtexconv.cc  bugs.bib  convert-to-new-format  converter.sed  converter2.sed  cv.export  debug.memcheck  dreibholz-id-individual.export  dreibholz-id-workinggroup.export  dreibholz-journal-2010.export  dreibholz-journals-2010.export  dreibholz-journals.export  dreibholz-others.export  dreibholz-paper-2010.export  dreibholz-papers.export  dreibholz-posters-and-demos.export  dreibholz-rfcs.export  dreibholz-talks.export  dreibholz-thesises.export  fix-cases-in-reference  fix-cases-in-references  fix-titles  get-author-url  grammar.h  grammar.y  (+49 more)
src/Images/: CMakeLists.txt  ListItem-Collapsed.dia  ListItem-Expanded.dia  make-images
src/bibtexconv-tests/: all-ok  bibtex-example1.good  bibtex-example2.good  md-example.good  odt-example.good  ok  show  test1.good  test2.good  test3.good  text-example.good  web-example1.good  web-example2.good  web-rserpool.good  yaml-example.good
src/odt/: content.xml  make-testfile  meta.xml  settings.xml  styles.xml  testfile.odt
src/storage/: no-author-url  t3
