AC_INIT([BibTeXConv], [0.7.9], [dreib@iem.uni-due.de])

AM_INIT_AUTOMAKE
AC_PREREQ(2.60)

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h:config.in])
AC_CONFIG_SRCDIR([src/bibtexconv.cc])

LT_INIT
# AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC


# ###### Maintainer mode ####################################################
AC_ARG_ENABLE([maintainer-mode],
[  --enable-maintainer-mode            enable maintainer mode ]
[default=yes]],enable_maintainer_mode=$enableval,enable_maintainer_mode=no)
if test "$enable_maintainer_mode" = "yes"; then
   CFLAGS="$CFLAGS -Wall -g3 -O0"
   CXXFLAGS="$CXXFLAGS -Wall -g3 -O0"
else
   CFLAGS="$CFLAGS -Wall"
   CXXFLAGS="$CXXFLAGS -Wall"
fi


# ###### libcurl ############################################################
AC_CHECK_LIB(curl, curl_easy_perform,
               [ CURL_LIBS=-lcurl ],
               [ AC_ERROR([libcurl not found!]) ],)
AC_SUBST(CURL_LIBS)


# ###### libssl (MD5 computation) ###########################################
AC_CHECK_LIB(crypto, MD5_Init,
               [ CRYPTO_LIBS=-lcrypto ],
               [ AC_ERROR([libcrypto not found!]) ],)
AC_SUBST(CRYPTO_LIBS)


# ###### Compiler flags #####################################################
CFLAGS="$CFLAGS -DUSE_UTF8"
CXXFLAGS="$CXXFLAGS -DUSE_UTF8"


# ###### Makefiles ##########################################################
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
